# rust-os

./: .dir-locals.el  .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  limine.cfg  linker.ld  shell.nix
.cargo/: config.toml
.github/workflows/: check.yaml
boot/: boot.asm  linker.ld  long_mode_init.asm
crates/bitmap-alloc/: .gitignore  Cargo.toml
crates/bitmap-alloc/src/: alloc.rs  bootstrap.rs  lib.rs
crates/ext2/: .gitignore  Cargo.toml
crates/ext2/scripts/: create-test-ex2-image.sh  create-test-ext2-image.sh
crates/ext2/src/: block_group.rs  directory.rs  inode.rs  lib.rs  reader.rs  strings.rs  superblock.rs
crates/fat/: .gitignore  Cargo.toml
crates/fat/scripts/: create-test-image.sh
crates/ring_buffer/: Cargo.toml
crates/test-infra/: Cargo.toml
crates/test-macro/: Cargo.toml
crates/vesa_framebuffer/: Cargo.toml
flake/: flake.nix  update-and-diff-profiles.sh
kernel/: Cargo.toml  linker.ld
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  ansiterm.rs  apic.rs  barrier.rs  block.rs  boot_info.rs  debug.rs  devices.rs  elf.rs  fs.rs  gdt.rs  graphics.rs  heap.rs  hpet.rs  interrupts.rs  ioapic.rs  keyboard.rs  lib.rs  logging.rs  main.rs  memory.rs  pci.rs  percpu.rs  qemu.rs  registers.rs  scheduler.rs  serial.rs  shell.rs  strings.rs  sync.rs  tests.rs  tick.rs  transmute.rs  virtio.rs
kernel/src/fs/: ext2.rs  fat.rs  mod.rs  sysfs.rs
kernel/src/fs/ext2/: block_group.rs  directory.rs  file_system.rs  inode.rs  mod.rs  reader.rs  strings.rs  superblock.rs  vfs.rs
kernel/src/graphics/: font.rs  framebuffer.rs  mod.rs  text_buffer.rs
kernel/src/memory/: address.rs  heap.rs  mapping.rs  mod.rs  page.rs  page_table.rs  physical.rs  virt.rs
kernel/src/pci/: capabilities.rs  device.rs  device_id.rs  location.rs  mod.rs
kernel/src/sched/: mod.rs  preempt.rs  schedcore.rs  stack.rs  syscall.rs  task.rs  userspace.rs
kernel/src/sync/: atomic_int.rs  init_cell.rs  initcell.rs  mod.rs  mutex.rs  once_cell.rs  once_channel.rs  oncechannel.rs  spin_lock.rs  spinlock.rs  wait_cell.rs  wait_queue.rs  waitqueue.rs
kernel/src/tests/: magic.rs  misc.rs  mod.rs
kernel/src/vfs/: block.rs  fs.rs  mod.rs  path.rs
kernel/src/virtio/: block.rs  config.rs  device.rs  features.rs  mod.rs  queue.rs  rng.rs
old-code/grub-64-bit-boot/: README.md  long_mode_init.asm
ring_buffer/src/: lib.rs
scripts/: create-boot-image.sh  create-test-ext2-image.sh
src/: allocator.rs  boot_info.rs  gdt.rs  interrupts.rs  kmain.rs  lib.rs  limine.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
userspace/hello/: .gitignore  Makefile  hello.asm
userspace/primes/: .gitignore  Makefile  primes.c  runtime.asm  syscalls.asm
vesa_framebuffer/: Cargo.toml  README.md
vesa_framebuffer/src/: font.rs  framebuffer.rs  lib.rs  text_buffer.rs
(+7 files in other folders)
