[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "4.1"
bitfield-struct = "0.3"
bitflags = "2.3"
bitmap-alloc = { path = "../crates/bitmap-alloc" }
ext2 = { path = "../crates/ext2" }
fat = { path = "../crates/fat" }
lazy_static = { version = "1", features = ["spin_no_std"] }
# N.B. Make sure this matches vesa_framebuffer version so tests are consistent.
limine = "0.1.10"
linked_list_allocator = "0.9"
log = "0.4"
paste = "1.0"
pc-keyboard = "0.5"
pic8259 = "0.10"
seq-macro = "0.3"
spin = "0.9"
uefi = "0.20"
vesa_framebuffer = { path = "../crates/vesa_framebuffer" }
x86_64 = "0.14"
