[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "4.1"
bitfield-struct = "0.3"
bitflags = "2.3"
bitmap-alloc = { path = "../crates/bitmap-alloc" }
bitvec = { version = "1", default-features = false, features = ["atomic", "alloc"] }
elf = { version = "0.7", default-features = false }
limine = "=0.1.10"
linked_list_allocator = "0.9"
log = "0.4"
paste = "1.0"
pc-keyboard = "0.5"
pic8259 = "0.10"
ring_buffer = { path = "../crates/ring_buffer" }
seq-macro = "0.3"
spin = "0.9"
test-infra = { path = "../crates/test-infra" }
test-macro = { path = "../crates/test-macro" }
x86_64 = "0.14"
# Latest version of zerocopy was like 2 years old when I added it, but I needed
# some newer features, like
# https://github.com/google/zerocopy/commit/a728cb9ecc5eef30462969da09820f0053bc0d62
zerocopy = { git = "https://github.com/google/zerocopy", rev = "b5b30d0287734c004bb2c1c97cc53a460443a57f" }

# Test dependencies
proptest = { version = "1", default-features = false, features = ["alloc", "unstable"], optional = true }

[features]
default = ["tests"]
tests = ["proptest"]
